Add v1 design to fin-website

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@ html, body {
 body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-rgb));
-  font-family: Calibri, 'Calibri Light', system-ui, -apple-system, sans-serif;
+  font-family: var(--font-inter), system-ui, -apple-system, sans-serif;
 }
 
 /* Smooth scrolling */
